# mypacman

./: README.md  mypacman-cli  pyproject.toml
mypacman/: README.md  pyproject.toml  requirements.txt
mypacman/src/mypacman/: __init__.py  board.py  game.py  input_handler.py  main.py  player.py  renderer.py
mypacman/tests/: test_game.py
specifications/: hld.md
src/: __init__.py
src/mypacman/: board.py  constants.py  game.py  ghost.py  input_handler.py  main.py  player.py  renderer.py
tests/: test_board_gameplay.py  test_game.py  test_movement.py
