[tool.poetry]
name = "mypacman"
version = "0.1.0"
description = "A Pac-Man-like game implemented in Python."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
